fix: css style dark mode

--- a/src/assets/css/split-module.css
+++ b/src/assets/css/split-module.css
@@ -15,8 +15,6 @@
   cursor: row-resize;
 }
 
-@media (prefers-color-scheme: dark) {
-  .gutter {
-    background-color: #23155b;
-  }
+html.dark .gutter {
+  background-color: #23155b;
 }
